# crkbd-shockburst

./: .gitignore  .gitmodules  crkbd-shockburst.kicad_pcb  crkbd-shockburst.kicad_prl  crkbd-shockburst.kicad_pro  crkbd-shockburst.kicad_sch  fp-lib-table  keyboard_half.kicad_sch  left_switches.kicad_sch  right_switches.kicad_sch  usb_dongle.kicad_sch
bottom-plate/: bottom-plate.kicad_pcb  bottom-plate.kicad_prl  bottom-plate.kicad_pro
bottom-plate/production/: bom.csv  netlist.ipc  positions.csv
cherryburst/: crkbd-shockburst.kicad_pcb  crkbd-shockburst.kicad_prl  keyboard_half.kicad_sch  right_switches.kicad_sch  sym-lib-table
cherryburst/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
chocburst/: crkbd-shockburst.kicad_pcb  crkbd-shockburst.kicad_prl  crkbd-shockburst.kicad_sch  keyboard_half.kicad_sch  kicad_libs  left_switches.kicad_sch  right_switches.kicad_sch  usb_dongle.kicad_sch
chocburst/production/: bom.csv  netlist.ipc  positions.csv
docs/: book.toml
docs/src/: chapter_1.md
dongle/: Cargo.toml  README.md
dongle/.helix/: languages.toml
dongle/src/: bsp.rs  lib.rs
dongle/src/bsp/: radio.rs
firmware/: Cargo.toml  README.md
firmware/.cargo/: config.toml
firmware/.nvim/: rust_analyzer.json
firmware/src/: bsp.rs  lib.rs  radio.rs  radio_protocol.rs
firmware/src/bsp/: dongle.rs  keyboard.rs
keyboard/: Cargo.toml
keyboard/.cargo/: config.toml
keyboard/.helix/: languages.toml
keyboard/src/: bsp.rs
production/: designators.csv  netlist.ipc
top-plate/: top-plate.kicad_pcb  top-plate.kicad_prl  top-plate.kicad_pro
top-plate/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
