[package]
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
name = "corne-firmware"
edition = "2021"
version = "0.1.0"
autobins = false

[dependencies]
keyberon = { git = "https://github.com/TeXitoi/keyberon.git" }
critical-section = "1"

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }

defmt = { version = "0.3.5", features = ["encoding-rzcobs"] }
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
#defmt-brtt = { git = "https://github.com/datdenkikniet/defmt-brtt.git" }

rtic = { version = "2", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1", features = ["defmt", "nrf52833", "embedded-hal-async"] }
rtic-sync = "1"
rtic-common = "1"

embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "nrf52833", "nfc-pins-as-gpio", "time-driver-rtc1", "gpiote", "unstable-pac", "time", "unstable-traits"] }
embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "msos-descriptor"] }

embedded-hal-async = "1.0.0-rc.1"
embedded-hal = "1.0.0-rc.1"

p256-cortex-m4 = { version = "0.1.0-alpha.6", features = ["prehash"] }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["heapless", "reduced-round", "rand_core"] }
ccm = { version = "0.5", default-features = false, features = ["heapless"] }
aes = { version = "0.8" }
x25519-cortex-m4 = { git = "https://github.com/korken89/x25519-cortex-m4" }
rand_chacha = { version = "0.3.1", default-features = false }

[features]
default = []

# testing features, to be removed
dongle_radio = []
keyboard_radio = []

[[bin]]
name = "dongle"
test = false
bench = false

[[bin]]
name = "keyboard"
test = false
bench = false

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-
