[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
name = "corne"
edition = "2021"
version = "0.1.0"

[dependencies]
keyberon = { git = "https://github.com/TeXitoi/keyberon.git" }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }

defmt = { version = "0.3.5", features = ["encoding-rzcobs"] }
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
#defmt-brtt = { git = "https://github.com/datdenkikniet/defmt-brtt.git" }

rtic = { version = "2.0.1", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1.0.1", features = ["defmt", "cortex-m-systick", "nrf52833", "embedded-hal-async"] }
rtic-sync = "1.0.1"
rtic-common = "1.0.0"

embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "nrf52833", "nfc-pins-as-gpio", "time-driver-rtc1", "gpiote", "unstable-pac", "time", "unstable-traits"] }
embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "msos-descriptor"] }

embedded-hal-async = "1.0.0-rc.1"
embedded-hal = "1.0.0-rc.1"

[[bin]]
name = "keyboard"
test = false
bench = false

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-
